// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonDirective Default should create with size large and color accent 1`] = `
<button
  class="gro-base-button gro-button gro-large gro-accent"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size large and color default 1`] = `
<button
  class="gro-base-button gro-button gro-large gro-default"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size large and color error 1`] = `
<button
  class="gro-base-button gro-button gro-large gro-error"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size large and color primary 1`] = `
<button
  class="gro-base-button gro-button gro-large gro-primary"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size medium and color accent 1`] = `
<button
  class="gro-base-button gro-button gro-medium gro-accent"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size medium and color default 1`] = `
<button
  class="gro-base-button gro-button gro-medium gro-default"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size medium and color error 1`] = `
<button
  class="gro-base-button gro-button gro-medium gro-error"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size medium and color primary 1`] = `
<button
  class="gro-base-button gro-button gro-medium gro-primary"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size small and color accent 1`] = `
<button
  class="gro-base-button gro-button gro-small gro-accent"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size small and color default 1`] = `
<button
  class="gro-base-button gro-button gro-small gro-default"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size small and color error 1`] = `
<button
  class="gro-base-button gro-button gro-small gro-error"
  grobutton=""
>
  Click Me
</button>
`;

exports[`ButtonDirective Default should create with size small and color primary 1`] = `
<button
  class="gro-base-button gro-button gro-small gro-primary"
  grobutton=""
>
  Click Me
</button>
`;
